Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twitter-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
