Kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: twitter-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: teslatorben/account-service
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
  namespace: twitter-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: teslatorben/post-service
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline-service
  namespace: twitter-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: timeline-service
  template:
    metadata:
      labels:
        app: timeline-service
    spec:
      containers:
        - name: timeline-service
          image: teslatorben/timeline-service
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayapi
  namespace: twitter-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gatewayapi
  template:
    metadata:
      labels:
        app: gatewayapi
    spec:
      containers:
        - name: gatewayapi
          image: teslatorben/gatewayapi
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:latest
          args:
            - "server"
            - "-dev"
            - "-dev-root-token-id=my-token"
          ports:
            - containerPort: 8200
          volumeMounts:
            - name: data
              mountPath: /vault/data
              readOnly: false
            - name: config
              mountPath: /vault/config
              readOnly: false
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          emptyDir: {}
            
          #configMap:
          #  name: vault-config
